--- a/config/locales/frontpage.be-BY.yml
+++ b/config/locales/frontpage.be-BY.yml
@@ -39,7 +39,7 @@ be-BY:
       header_html: "Мы ўжо стварылі эксперыментальную мадэль і  з яе дапамогай людзі па ўсім свеце робяць файныя рэчы."
       subhead_html: '<a href="%{try_loomio_link}">Паспрабуйце Loomio Beta</a> зараз. Або можаце <a href="%{donate_link}">падтрымаць праект</a> і дапамагчы фінансаванню Loomio 1.0'
     mobile:
-      header_html: 'Loomio 1.0 будзе працаваць на любым дэвайсе, бо зроблены з дапамогай лепшай <strong>адкрытай мабільнай тэхналогіі. '
+      header_html: 'Loomio 1.0 будзе працаваць на любым дэвайсе, бо зроблены з дапамогай лепшай <strong>адкрытай мабільнай тэхналогіі.</strong> '
     quote:
       header:
         rushkoff_html: '“Loomio <strong>выкарыстоўвае магчымасці інтэрнэту</strong>, каб прывесці людзей да кансэнсусу, а не развіваць разнапалярныя дыскусіі.”<div class="attributation">– <a href="http://rushkoff.com">Дуглас Рушкоў</a>, аўтар <em>Сучаснага шоку</em></div>'
