--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -255,7 +255,7 @@ hu:
       <p>Úgy is bevonhatsz másokat a vitába, ha használod a @név eszközt és a megjegyzésekben megnevezel egyeseket, levelet fognak kapni róla, hogy te megemlítetted őket.</p>
 
     example1_html: |+
-      <h3>Azt szeretnéd, hogy a csoport tárgyaljon meg egy szerteágazó témát és dolgozzon ki rá megoldást<h3>
+      <h3>Azt szeretnéd, hogy a csoport tárgyaljon meg egy szerteágazó témát és dolgozzon ki rá megoldást</h3>
       <p>Stratégia: Tárgyaljátok meg alaposan a témát mielőtt javaslatot tennétek.</p>
       <p>Gyakran az a legjobb megoldás kulcsa, hogy mindenki pontosan tisztázza miről is van szó, mielőtt elhamarkodottan döntene. Ha a tagok részt vesznek a vitában és a javaslat kidolgozásában, sokkal jobban elfogadják a közös döntést is.</p>
 
