--- a/config/locales/frontpage.ru.yml
+++ b/config/locales/frontpage.ru.yml
@@ -23,9 +23,9 @@ ru:
       head_html: 'Этому миру нужны инструменты для
 
         <strong>совместного принятия решений</strong>.'
-      desc_html: 'Loomio бесплатен и <ahref="https://github.com/loomio/loomio">открыт</a> для участия в принятии решений всех, везде и всегда.'
+      desc_html: 'Loomio бесплатен и <a href="https://github.com/loomio/loomio">открыт</a> для участия в принятии решений всех, везде и всегда.'
     product:
-      header_html: 'Когда мы слышим все мнения, мы принимаем лучшие решения.'
+      header_html: 'Когда мы слышим<strong> все мнения</strong>, мы принимаем <strong>лучшие решения</strong>.'
       step1:
         header: '1. Обсудить'
         desc: 'Начните обсуждение на любую тему, привлекая заинтересованных людей. Обменивайтесь мыслями и развивайте идеи вместе.'
@@ -41,11 +41,11 @@ ru:
       header_html: "Мы уже создали пробную версию, и множество людей со всего мира делают множество интересных вещей с помощью Лумио."
       subhead_html: '<a href="%{try_loomio_link}">Попробуйте Loomio Beta</a>. <a href="%{donate_link}">Поддержите нас</a>, чтобы помочь в создании Loomio 1.0'
     mobile:
-      header_html: 'Loomio 1.0, построенный на лучших открытых решениях, будет работать на любом мобильном устройстве.'
+      header_html: 'Loomio 1.0, построенный на лучших открытых решениях, будет работать на <strong>любом мобильном устройстве</strong>.'
     quote:
       header:
-        rushkoff_html: '"Loomio реализует потенциал Интернета, чтобы привести людей к консенсусу, а не к полярным дебатам", — Дуглас Рашкоф, автор книги "Present Shock".'
-        sifry_html: '"Loomio попадает в золотую середину между индивидуальным голосом и коллективными решениями", — Мика Сифри, редактор TechPresident.'
+        rushkoff_html: '"Loomio <strong>реализует потенциал Интернета</strong>, чтобы привести людей к консенсусу, а не к полярным дебатам", <div class="attributation"> — <a href="http://rushkoff.com"> Дуглас Рашкоф</a>, автор книги <em>Present Shock</em></div>'
+        sifry_html: '"Loomio попадает в золотую середину между  <strong>индивидуальным голосом</strong> и <strong>коллективными решениями</strong>", <div class="attributation">— Micah Sifry,  <em><a href="http://techpresident.com">редактор TechPresident.</a></em></div>'
     team:
       header: 'О Loomio'
       desc: 'Мы небольшая команда разработчиков свободного программного обеспечения и активистов за социальную справедливость, работающих на Enspiral в Аотеароа в Новой Зеландии, с широким кругом друзей, сторонников и консультантов по всему миру.'
