--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -231,6 +231,9 @@ en:
     remove_coordinator: 'Remove Coordinator'
     remove_member: 'Remove'
 
+  profile_page:
+    my_groups: Groups
+
   discussion:
     you_like_this: 'You like this.'
     liked_by_you_and_someone: 'You and {{name}} like this.'
