--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -115,6 +115,7 @@ en:
     edit_discussion_title: 'Edit thread'
     discussion_helptext: 'The thread is where everyone can discuss a topic and make decisions together.'
     group_label: 'Group'
+    group_placeholder: 'Select a group'
     title_label: 'Title'
     title_placeholder: 'What is the topic you want to discuss?'
     context_label: 'Context'
